# jkcfg

./: .bazelrc  .gitignore  .travis.yml  .yarnrc  BUILD.bazel  README.md  WORKSPACE  justfile  package.json  tsconfig.json
apps/bazel-remote-cache/: BUILD  index.ts  lib.ts  package.json  params.ts
apps/monero-node/: BUILD  index.ts  lib.ts  package.json  params.ts
apps/nfs-client-provisioner/: BUILD  index.ts  lib.ts  package.json  params.ts
apps/nfs-server/: BUILD  index.ts  lib.ts  package.json  params.ts
apps/spotifyd/: BUILD  index.ts  lib.ts  package.json  params.ts  tsconfig.json
apps/syncthing/: BUILD  index.ts  lib.ts  package.json  params.ts
apps/tautulli/: BUILD  index.ts  lib.ts  package.json  params.ts
hack/: build.ts  paths.ts  pkgjson.ts  release-variables.sh  release.sh  tsconfig.json  tsconfig.ts  typescript.bzl  update.sh
hack/lib/: BUILD  index.ts
hack/package-json/: BUILD  base.json  check.ts  deps.bzl  update.ts
hack/release/: release.sh
lib/argo/events/: BUILD  index.ts  package.json  tsconfig.json
lib/k8s/: BUILD  app.ts  assertions.ts  cert-manager-annotations.ts  cluster-issuer.ts  container.ts  deployment.ts  index.ts  ingress.ts  label-selectors.ts  labels.ts  models.ts  package.json  pod.ts  pvc.ts  rancher-helm.ts  rbac.ts  sealed-secret.ts  secrets.ts  service-account.ts  service.ts  util.ts
lib/k8s/mixins/: index.ts  labels.ts  namespace.ts
lib/k8s/parameters/: index.ts
lib/tekton/: BUILD  common.ts  constants.ts  index.ts  package.json  tsconfig.json
lib/tekton/pipeline/: index.ts
(+25 files in other folders)
